@@ -1,4 +1,4 @@
 /*auto-generated*/
-#define UPDATED_STR "Aug 15, 2020 5:25:52pm"
-#define GIT_COMMIT_HASH "5d157b4"
+#define UPDATED_STR "Aug 16, 2020 8:55:14pm"
+#define GIT_COMMIT_HASH "a66edff"
 #define COPYRIGHT_END_YEAR "2020"
